...
            "state": "translated",
            "value": "Không tiêu đề, không định dạng. Chỉ là dòng suy nghĩ lúc này."
          }
        }
      }
    },
    "주의": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Warning"
          }
...
            "state": "translated",
            "value": "Bảng"
          }
        }
      }
    },
    "표 삭제": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete table"
          }
...
            "state": "translated",
            "value": "Ghim vào hồ sơ"
          }
        }
      }
    },
    "피드": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Feed"
          }
...
